# monoprotocol

./: AUDIT.md  LICENSE  README.md
.github/workflows/: ci.yml
conformance/: README.md
conformance/cbor/: envelope_private_state_encrypted.cbor  envelope_private_state_encrypted.manifest.json  envelope_public_metadata.cbor  envelope_public_metadata.manifest.json
conformance/golden/: crypto.json
conformance/json/: envelope_private_state_encrypted.json  envelope_public_metadata.json  transfer_policy_matrix.json
rust/: Cargo.toml
rust/mono-protocol/: Cargo.toml
rust/mono-protocol-conformance/: Cargo.toml
rust/mono-protocol-conformance/src/: lib.rs
rust/mono-protocol/src/: capability.rs  cookie.rs  envelope.rs  ids.rs  lib.rs  object.rs  twofa.rs
rust/monoprotocol/: Cargo.toml
rust/monoprotocol-conformance/: Cargo.toml
rust/monoprotocol-conformance/src/: lib.rs
rust/monoprotocol/src/: content.rs  crypto.rs  merkle.rs  ownership.rs  reducer.rs  sync_log.rs  transfer.rs  version.rs  webauthn.rs
rust/tools/gen-golden/: Cargo.toml
rust/tools/gen-golden/src/: main.rs
spec/: CONFORMANCE.md  OBJECTS.md  PROTOCOL.md
