[workspace]
resolver = "2"
members = [
    "monoprotocol",
    "monoprotocol-conformance",
    "tools/gen-golden",
]
default-members = ["monoprotocol", "monoprotocol-conformance"]

[workspace.package]
version = "0.2.1"
edition = "2021"
rust-version = "1.86"
license = "ISC"
repository = "https://github.com/atechnology-company/monoprotocol"

[workspace.dependencies]
monoprotocol = { path = "monoprotocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
blake3 = "1"
base64 = "0.22"
rand = "0.8"
ciborium = "0.2"
hex = "0.4"
