[package]
name = "mono-protocol-conformance"
description = "Conformance tests against spec fixtures (golden, JSON, CBOR)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
mono-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
ciborium.workspace = true
hex.workspace = true
base64.workspace = true
