[package]
name = "gen-golden"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
mono-protocol = { path = "../../mono-protocol" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
ciborium.workspace = true
hex.workspace = true
base64.workspace = true
blake3.workspace = true
